# machete

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  machete.sqlite
.github/workflows/: deploy.yml  docker.yml
.sqlx/: query-020a1acec07de3cbbcc6989a94a918829c10f2a0d2079cfa07dc1578a7c42429.json  query-040443c615c2b002b526ebf5d80d04bed83a77a0e442405acef177983cc8c150.json  query-06a1dfc8e5ff4993f2d65781c9341430db2205974d5d31e1bb0c428e6b1aa65f.json  query-075f1148c8beb3ad55206a2810bcd5f2dd74335d049b55a614b822c31982edff.json  query-0bdfd81b583ddd872038bd2d0419b56ebc0efa9b3e537254a46ab07e3fa2d563.json  query-0c0ed5b95de568a4addb428a6fe594e62d56d4587cd055c28660920a266e6dcc.json  query-0c5d05c936d07d19223346034a02925c4456f9b52aba23d1c80602262c5e793d.json  query-0cdc3c45ba0d093663ed302e908598f6430baffe4c7a8d48272dd7d14731f765.json  query-0ceab8989dd33c31b092349fe64851c588599dd204e4b9aff294c487b66a19d4.json  query-0e23c4a13096cc3445a2c9fd579d71453d9d5962285791cf59ff308274cc94a8.json  query-0ed9a49ff120ea27f87b1c1dfc7510bd0f029411273f931354186b0ee732951b.json  query-11b92390c61955a754024d1a78eb60f58ef78c53fb7cb99a2e4cb12e23085f7d.json  query-123ff932db054a3685fb08b87bf5425cfdd4ce4a20cf1efe3e5158a13f8ed25d.json  query-1850b7d1449973409f8c2be99e55aa7d8bd3c67eb65c52d32343bc75750fc128.json  query-1d09bb69f044211227935a0a8edd5e1672c51396c49cb3d8508af3578dbdae99.json  query-1db0e6ca244e8d39be61608a0540a082d6a61c8e5f66e585911f0a6187bdc107.json  query-1ea9165bf6eb5a229bfeadf503fdffcbb6453aee2023bcfcbfd717abc2bb7322.json  query-206151fad11585513257ebce975bd9bc4b54c172178fef0fd59b2fc6e3917e10.json  query-20f66bd5e1092328a20a7a9adc5a163c4e24b9626e9fa6b350b7f9a0572a79b5.json  query-21cfc2c9c23d644e9b28bdb7e61d457402f0f2d3ae547deb72bd813fe2218c4f.json  query-23dc85600a9b2f1290d623676d687cfd947144caa76cd485dbb58c3814efc994.json  query-240682585af19a08427f08bc2a988ce8a6ef0ae5b8b11e55fa55aff5a44e039d.json  query-2816864ccaec369ba14f2e2e5baa51e4bfa3aafd6064fefb0b5f21e155a96677.json  query-2a038b22b91dd9ffd95e1c7a640a5a7ddc04110f3dac0b1916cf3cf8c3ba2abf.json  query-2aa1fab031e43273fe3441b23a611a9ca2b7b8ef3769d3efb51251b5a235067c.json  query-2d9f3ee61c89382899526c014ad88761c6eefb7b1dcc956a6dd9c5949ec57ee4.json  query-2e0104349048980d7d272da155eaefba34167a53d39d2e8effa02b7decd1156a.json  query-32bd8931da95bf43d917bf8320d6b7dcc0e5fff87bc2b5e2b6ed524c321a2736.json  query-34e851c2a82e028996e7be43dfb55e66065a39413c8024ab1cb4af1b3a6c642c.json  query-358f9edf51460dd9422a75db53d8bd4ddddf7315c86e10892e26235cf2b56b39.json  query-35c3f7937e739617595869a128736e8b9dc5ccbde35888ff51a5fede4678289e.json  query-35cf7bc30add836f8817915c264cd2f84d28fde8c36fe5589ed48dbcc2057376.json  query-376863bbbe5a413db50a57e966fff87cca70ce163bd1a93bce9fcb1c5c48462b.json  query-3e8fe8e9d707acd06c238dd3c7f0079b4eb34dfcf3586954750472111c94c60d.json  query-45f8fa13bbacace61d933de60130873e8b7ec5b232625ca6679eb2ec9c7419fb.json  query-4730d737087f9b2650f9fb41e371e241b4c5ee44c460be8405000a999c0ba80b.json  query-475c5c0272b3a080748bd55a13571193e6effe3b998fac922bcbcfd829bb4b6e.json  query-487d6889842369af546578a27d3269df8ad5f49209ee77abc578cde6494bee9b.json  query-4a30ee01383dd61cc4034f888cc85cd4dc1b1df8010c4d6cb976f569be921cfb.json  query-4a88874410af80810c41c3673313194138ee5c69ab9c65e7a62bfcb54d848142.json  (+111 more)
crates/machete/: Cargo.toml
crates/machete-app/: .gitignore  Cargo.toml
crates/machete-app/src/: app.rs  lib.rs  main.rs  settings_panel.rs  update_context.rs  utils.rs  web.rs
crates/machete-app/src/apps/logbook/: event_group_creator.rs  log.rs  mod.rs
crates/machete-app/src/apps/summary/: party_display.rs
crates/machete-app/src/fetch/: mod.rs
crates/machete-app/src/ui_models/: events.rs  filters.rs  library.rs  mod.rs
crates/machete-app/src/widgets/: hidden_combo_box.rs
crates/machete-core/: Cargo.toml
crates/machete-macros/: Cargo.toml
crates/machete-server/: Cargo.toml
crates/machete-server/.sqlx/: query-1dfb2d36e5c3e3ca19ea0c5b718c32233956ff7ead40022ed0d0a07ac6f22992.json  query-79d59eae2e82513cf11de05600427390dcb611b8413ca52f7891c8067d8b4a59.json  query-c6df3017c96da2148f48e4728a98594619d7b6b33a578c3f0b03ce6a1ef2daed.json  query-f3d13ab33dbd005f212f4c217e7bf8e9e24c68bbc575f9c990ab0bde903d8b3a.json
crates/machete-server/src/: campaign.rs  encounters.rs  lib.rs  library.rs  main.rs
crates/machete-server/src/database/: campaigns.rs  characters.rs  classes.rs  creatures.rs  encounters.rs  events.rs  hazards.rs  items.rs  logs.rs  mod.rs  spells.rs  tags.rs
crates/machete-server/src/models/: currency.rs  log.rs  mod.rs  query.rs
crates/machete/src/: app.rs  lib.rs  main.rs
crates/machete/src/database/: creatures.rs  items.rs  mod.rs  spells.rs  tags.rs
crates/machete/src/filters/: filter.rs  library.rs  mod.rs
crates/machete/src/models/: campaign.rs  characters.rs  encounter.rs  events.rs  mod.rs
crates/machete/src/ui_models/: filters.rs
fixtures/: demo_campaign.json  demo_library.json
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/static/: _headers
migrations/: 20240622072421_init.sql  20241103054820_user_data.sql  20241124121520_user_auth.sql  20250119092802_fuzzy_and_encounters.sql  20250207010302_expected.sql  20250222114105_encounter_types.sql  20250222114105_initialization_encounters.sql  20250309064105_accomplishments.sql  20250319065810_relic_gifts.sql  20250325213400_more_hazard.sql  20250407225200_remove_status.sql  20250418111900_base_item.sql  20250422132700_moves_party_presence.sql  20250429205600_extract_traits.sql  20250503204100_views.sql  20251127102100_items_rewrite.sql
scripts/: build_web.sh  setup_web.sh  start_server.sh
src/: app.rs  auth.rs  campaign.rs  encounters.rs  lib.rs  library.rs  main.rs  nlp.rs  update_context.rs
src/apps/: mod.rs
src/database/: auth.rs  campaigns.rs  characters.rs  classes.rs  creatures.rs  encounters.rs  events.rs  hazards.rs  import.rs  logs.rs  (+7 more)
tests/: common.rs
web/: .gitignore  CNAME  README.md  example.html  index.html
(+133 files in other folders)
