[workspace]
resolver = "2"
members = [
    "crates/machete",
    "crates/machete-app",
    "crates/machete-core",
    "crates/machete-macros",
    "crates/machete-server"
]
default-members = [
    "crates/machete-app"
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
eframe = { version = "0.27.2", default-features = false, features = [  "web_screen_reader" ] }
egui = { version = "0.27.2", features = ["callstack", "default", "log"] }
egui_extras = { version = "0.27.2", features = ["default", "image", "datepicker"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
chrono = {version = "0.4.38", features = ["serde"]}
itertools = "0.13.0"

# TODO: tracing
log = { version = "0.4", features = ["std"] }
thiserror = "1.0.61"
dotenvy = "0.15.7"

regex = "1.10.4"
lazy_static = "1.4.0"

tokio = { version = "1.35.1", features = ["sync", "macros", "rt"] }

sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "migrate",
    "json",
] }
axum = "0.7.5"

# feature "http":
ehttp = { version = "0.5" }
image = { version = "0.25",  features = ["jpeg", "png"] }
poll-promise = { version = "0.3",  default-features = false }

wasm-bindgen = { version = "=0.2.92" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = {version = "0.3.58"}

# Downstream random crate needs 'js' enabled for wasm
getrandom = { version = "0.2.15", features = ["js"]}