

[package]
name = "machete"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
version = "0.1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.12.0"
chrono = {version = "0.4.38", features = ["serde"]}
itertools = "0.13.0"

# TODO: tracing
env_logger = "0.11.3"
log = { version = "0.4", features = ["std"] }
thiserror = "1.0.61"
dotenvy = "0.15.7"

regex = "1.10.4"
lazy_static = "1.4.0"

tokio = { version = "1.35.1", features = ["rt-multi-thread", "sync", "macros", "rt"] }

sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "migrate",
    "json",
] }
axum = "0.7.5"
axum-macros = "0.4.1"
axum-extra = {version = "0.9.6", features = ["form", "query", "cookie", "typed-header"]}
tower-http = {version = "0.5.2", features = ["cors"] }
tower = "0.4.13"
reqwest = { version = "0.12.5", features = ["json"] }

rand = "0.8.4"
time = "0.3.26"
bcrypt = "0.10.1"