[package]
name = "machete-server"
version = "0.1.0"
edition = "2021"

[dependencies]
machete = { path = "../machete" }
machete-core = { path = "../machete-core" }
machete-macros = { path = "../machete-macros" }

serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
itertools = { workspace = true}

# TODO: tracing
log = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true}

dotenvy = { workspace = true }

getrandom = {workspace = true, features = ["js"]}

tokio = {workspace = true, features = ["rt-multi-thread"]}
sqlx = {workspace = true}
axum = {workspace = true}
axum-macros = "0.4.1"