[package]
name = "machete-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "machete-server"
path = "src/main.rs"

[dependencies]
machete = { path = "../machete" }
machete-core = { path = "../machete-core" }
machete-macros = { path = "../machete-macros" }

serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
itertools = { workspace = true}

# TODO: tracing
log = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true}

dotenvy = { workspace = true }
env_logger = "0.11.3"
getrandom = {workspace = true, features = ["js"]}

tokio = {workspace = true, features = ["rt-multi-thread"]}
sqlx = {workspace = true}
axum = {workspace = true}
axum-macros = "0.4.1"
tower-http = {version = "0.5.2", features = ["cors"] }
tower = "0.4.13"

reqwest = { version = "0.12.5", features = ["json"] }