[package]
name = "machete"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
itertools = { workspace = true}

# TODO: tracing
log = { workspace = true, features = ["std"] }

regex = { workspace = true }
lazy_static = { workspace = true}

getrandom = {workspace = true, features = ["js"]}